# diplom_api

./: README.md  pyproject.toml
api/: reqres.py
models/: data_reqres.py
schemas/: schemas_reqres.py
tests/: test_reqres.py
